* Make display abstract larger and align it. * Fix issue with titles bleeding of page in browse view * Fix issue with thumbnails bleeding into  breadcrumbs on small screens

--- a/static/css/sass/cdr-ui.scss
+++ b/static/css/sass/cdr-ui.scss
@@ -766,7 +766,13 @@ p.no-search-results {
     line-height: 22px;
     margin-left: 25px;
   }
+
+  .read-more {
+    margin-left: 155px;
+  }
 }
+
+
 
 .browse-header.browse-header-bottom {
   padding-bottom: 25px;
@@ -1321,6 +1327,14 @@ table.dataTable {
   }
 }
 
+@media screen and (max-width: 1172px){
+  .browse-header {
+    .read-more {
+      margin-left: 25px;
+    }
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .bottomline {
     display: block;
@@ -1458,9 +1472,14 @@ table.dataTable {
     }
   }
 
+  .content-wrap.full_record {
+    h2 {
+      display: inline-block;
+    }
+  }
+
   .file_record {
     .columns-resize {
-
       .is-10 {
         ul {
           margin-top: 0;
