--- a/static/css/sass/cdr_ui_styles.scss
+++ b/static/css/sass/cdr_ui_styles.scss
@@ -316,7 +316,13 @@ p.no-search-results {
     line-height: 22px;
     margin-left: 25px;
   }
+
+  .read-more {
+    margin-left: 155px;
+  }
 }
+
+
 
 .browse-header.browse-header-bottom {
   padding-bottom: 25px;
@@ -871,6 +877,14 @@ table.dataTable {
   }
 }
 
+@media screen and (max-width: 1172px){
+  .browse-header {
+    .read-more {
+      margin-left: 25px;
+    }
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .bottomline {
     display: block;
@@ -1008,9 +1022,15 @@ table.dataTable {
     }
   }
 
+  .content-wrap.full_record {
+    h2 {
+      display: inline-block;
+      margin-left: 20px;
+    }
+  }
+
   .file_record {
     .columns-resize {
-
       .is-10 {
         ul {
           margin-top: 0;
